Moved Benefits pages into their own folder

--- a/content/index.slim
+++ b/content/index.slim
@@ -129,7 +129,7 @@ h1 RESTful image processing
           If your CMS doesn't already include ImageResizer, you can add it in minutes. Standard drop-in installation works with nearly every CMS, and we have instructions for the rest.
         .clear
   .span3
-    a.block.plaintext href="/docs/comprehensive"
+    a.block.plaintext href="/docs/benefits/comprehensive"
       .icons-box
         i.ico-white.circle-color-full.ico-tint
         h3 Full imaging suite
@@ -138,7 +138,7 @@ h1 RESTful image processing
           Bring clarity to your photos with the unsharp mask, white balance adjustment, noise removal, contrast, saturation, and brightness tools. Design text and image overlays, and apply sophisticated filters.
         .clear
   .span3
-    a.block.plaintext href="/docs/stable"
+    a.block.plaintext href="/docs/benefits/stable"
       .icons-box
         i.ico-white.circle-color-full.ico-shield
         h3 Secure and stable
@@ -147,7 +147,7 @@ h1 RESTful image processing
           Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day 1.
         .clear
   .span3
-    a.block.plaintext href="/docs/performant"
+    a.block.plaintext href="/docs/benefits/performant"
       .icons-box
         i.ico-white.circle-color-full.ico-stats
         h3 High performance
@@ -165,7 +165,7 @@ h1 RESTful image processing
         p ImageResizer boasts a sizeable collection of community plugins, and there are always people around to give you a hand at StackOverflow:ImageResizer when the self-diagnostics can't help.
         .clear
   .span3
-    a.block.plaintext href="/docs/agile"
+    a.block.plaintext href="/docs/benefits/agile"
       .icons-box
         i.ico-white.circle-color-full.ico-roundabout
         h3 Agile and DRY
