Modified default layout to support sidebar via metadata and be category-aware

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -106,3 +106,18 @@ a.block:hover .icons-box:after{
 }
 */
 a.editlink{color:white; float:left;}
+
+ul.category_headers{
+  line-height:20px;
+  li {
+    display:inline-block;
+    padding:5px;
+  }
+  li.active{
+    font-weight:bold;
+  }
+}
+
+.sub_nav_bar{
+  text-align:right;
+}
