--- a/content/_layout/page.slim
+++ b/content/_layout/page.slim
@@ -1,13 +1,21 @@
 Layout: layout
 
+- s = page.meta.sidebar && !(/\Afalse|null|nil|off|none\Z/i =~ page.meta.sidebar) ? page.meta.sidebar : nil
 
 .row
-  .span12
+  article class=(s ? "span9" : "span12")
     - if page.lib?('plusone')
       div style="width:70px;padding-top:25px;float:right"
         .g-plusone
     - if page.meta.warning
       .alert = page.meta.warning
+    - if !s && page.path.start_with?("/docs")
+      .sub_nav_bar
+        ul.category_headers
+          - config.categories.each do |c|
+            li class=(page.meta.category == c.tag ? "active" : "")
+              a href=c.page
+                =c.title
 
     == yield
 
@@ -17,4 +25,16 @@ Layout: layout
     - if page.lib?('plusone')
       .g-plusone
     == partial :comments
+
+  - if s
+    aside.span3.sidebar
+      ul.category_headers
+        - config.categories.each do |c|
+          li class=(page.meta.category == c.tag ? "active" : "")
+            a href=c.page
+              =c.title
+
+      == partial page.meta.sidebar
+
+     
 
