Added wording to hint OS projects get special help, disabled sidebar

--- a/content/docs/community.slim
+++ b/content/docs/community.slim
@@ -1,8 +1,9 @@
 Aliases: /docs/wrappers /docs/contribute
 Icon: github-alt
+Sidebar: false
+
 
 h1 ImageResizer Community
-
 
 .row 
   .span4
@@ -59,14 +60,17 @@ h1 ImageResizer Community
 
       We're always quick to provide assistance to developers creating community plugins, so feel free to reach out and ask questions!
 
-      **Also, check out [the Redistribution and CMS Integration Guide](/docs/redist) if you're interested in redistributing ImageResizer with your product.**
+      **Also, check out [the Redistribution and CMS Integration Guide](/docs/redist) if you're interested in redistributing ImageResizer with your product.** We provide priority assistance to other open-source projects using ImageResizer. 
 
+      
   .span4
     .title: h2 Discuss Ideas
     markdown:
       **[Share your ideas and feature requests on the UserVoice forum](http://resizer.uservoice.com/forums/108373-image-resizer), so others can vote on, comment about, and perhaps implement your proposals**. The ImageResizer project isn't just about resizing. We're Lightroom as a web-service, but with a plugin model so things don't get bloated - and the community is free to innovate.
 
       If your idea doesn't get enough votes to be developed by Imazen, don't despair - **If you want to take a shot at implementing it, we'll help you out!** We're generally willing to publish community plugins in the /Contrib folder, although you may prefer to host it on your own [GitHub repostiory](http://github.com) so we can add a link to it on this page.
+
+      A strong and diverse community is essential for the health and quality of any software library.
     
     .title: h2 Community Support
     markdown:
@@ -75,7 +79,6 @@ h1 ImageResizer Community
       Please be courteous; vote good answers up, and mark them as accepted. Make sure your questions include a gist with the diagnostics page output, and you've included all relevant details and detailed error messages. It's best to register and select a username instead of posting anonymously; anonymous posts are often considered spam.
 
       We strongly suggest [reading the support page](/support) before posting, as nearly all common mistakes are explained there.
-
 
 .row
   .span6
