--- a/content/plugins/editions/creative.slim
+++ b/content/plugins/editions/creative.slim
@@ -13,7 +13,7 @@ p With the Creative Edition, you have access to a comprehensive imaging suite.
 ul.arrow_list
   li Bring clarity to your photos with the unsharp mask, white balance adjustment, and noise removal tools. 
   li Apply sophisticated filters to give your photos the right look. 
-  li Design multiple text and image overlays, backgroungs, and watermarks for branding purposes. 
+  li Design multiple text and image overlays, backgrounds, and watermarks for branding purposes. 
 
   li: markdown: Trim excess whitespace from your product photos - automatically.
 
