Upgraded FancyBox to 2.1.4

--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -72,7 +72,7 @@ html(lang="en" class="no-js")
       script src="/js/carousel.js"
       script src="/js/jquery.cslider.js"
       script src="/js/slider.js"
-      script src="/js/fancybox.js"
+      script src="/js/jquery.fancybox.js"
 
       script src="/js/highlight/highlight.pack.js"
       script src="/js/custom.js"
