--- a/content/css/less/fancybox.less
+++ b/content/css/less/fancybox.less
@@ -94,7 +94,7 @@
 #fancybox-loading div {
   width: 44px;
   height: 44px;
-  background: url("@{imgbase}fancybox_loading.gif}") center center no-repeat;
+  background: url("@{imgbase}fancybox_loading.gif") center center no-repeat;
 }
 
 .fancybox-close {
