--- a/content/docs/benefits/sidebar.slim
+++ b/content/docs/benefits/sidebar.slim
@@ -7,3 +7,4 @@ ul.star_list
   li: a href="/docs/benefits/agile" Agile
   li: a href="/docs/benefits/stable" Stable & Secure
   li: a href="/docs/benefits/comprehensive" Comprehensive
+  li: a href="/docs/benefits/customers" Large & Diverse User Base
