Moved Testimonials page into /docs/benefits

--- a/content/docs/benefits/sidebar.slim
+++ b/content/docs/benefits/sidebar.slim
@@ -7,4 +7,5 @@ ul.star_list
   li: a href="/docs/benefits/agile" Agile
   li: a href="/docs/benefits/stable" Stable & Secure
   li: a href="/docs/benefits/comprehensive" Comprehensive
-  li: a href="/docs/benefits/customers" Large & Diverse User Base
+  li: a href="/docs/benefits/customers" Join a large and diverse user base
+  li: a href="/docs/benefits/testimonials" Read testimonials
