--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -48,9 +48,9 @@ h1 Support
 			| Support Type
 			br
 			select name="o1"
-				option value="30 Minute Q&amp;A" 30 Minute Q&amp;A ($70)
-				option value="1 Aided install + 30 Minute Q&amp;A" 1 Aided install + 30 Minute Q&amp;A ($130)
-				option value="2 Aided installs + 30 Minute Q&amp;A" 2 Aided installs + 30 Minute Q&amp;A ($190)
+				option value="30 Minute Q&amp;A" 30 Minute Q&A ($70)
+				option value="1 Aided install + 30 Minute Q&A" 1 Aided install + 30 Minute Q&amp;A ($130)
+				option value="2 Aided installs + 30 Minute Q&A" 2 Aided installs + 30 Minute Q&amp;A ($190)
 				option value="1 Support Incident" 1 Support Incident ($135)
 
 			br
