And… trying again.

--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -48,10 +48,10 @@ h1 Support
 			| Support Type
 			br
 			select name="o1"
-				option value="30QA" 30 Minute Q&A ($70)
-				option value="1AI30QA" 1 Aided install + 30 Minute Q&amp;A ($130)
-				option value="2AI30QA" 2 Aided installs + 30 Minute Q&amp;A ($190)
-				option value="1SI" 1 Support Incident ($135)
+				option value="30 Minute QA" 30 Minute Q&A ($70)
+				option value="1 Aided Install and a 30 Minute QA" 1 Aided install + 30 Minute Q&amp;A ($130)
+				option value="2 Aided Installs and a 30 Minute QA" 2 Aided installs + 30 Minute Q&amp;A ($190)
+				option value="1 Support Incident" 1 Support Incident ($135)
 
 			br
 			input type="image" src="http://www.e-junkie.com/ej/ej_add_to_cart.gif" alt="Add to Cart" class="ec_ejc_thkbx" onClick="javascript:return EJEJC_lc(this.parentNode);"
