Refactored out domain parsing to site.rb, removed old showcase from home page, changed testimonial presentation

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -121,3 +121,13 @@ ul.category_headers{
 .sub_nav_bar{
   text-align:right;
 }
+
+
+.testimonials_home ul.quotations li{
+  font-size: 140%;
+  margin-top: 20px;
+}
+
+.testimonials_home ul.quotations li .quote-author{
+  font-weight: bold;
+}
