--- a/content/index.slim
+++ b/content/index.slim
@@ -207,92 +207,44 @@ h3 Who uses ImageResizer?
     li: img src="http://z.zr.io/rw/clientlogos/flavorplate.png?width=160&height=100" alt="flavor plate"
     li: img src="http://z.zr.io/rw/clientlogos/MizuniLogoR_933x216.png?width=160&height=100" alt="Mizuni"
     li: img src="http://z.zr.io/rw/clientlogos/SoulRebornLogo.png?width=160&height=100" alt="Soul Reborn"
+
+.testimonials_home
+  ul.quotations
+    li
+      .customer_statement
+        | ... Just to be clear to the listener, I reached out to Nathanael, and I'm talking about his product because I think it's amazing and awesome, and I've talked about it  before on the blog. He's not an advertiser, this is me, Scott, saying that this is a rocking awesome library. - 
+        a href="http://www.hanselminutes.com/313/deep-inside-image-resizing-and-scaling-with-aspnet-and-iis-with-imageresizingnet-author-na" Hanselminutes #313
+      .quote-bg
+      .quote-author
+        a href="http://hanselman.com"
+          | Scott Hanselman  
+        span
+          | , Web Platform Team, Microsoft
+    li
+      .customer_statement
+        | We have 8 years working knowledge of dynamic image resizing software, and the majority of that time was spent working with industry-leading products such as Adobe Scene7 and eRez. ImageResizer is what we’ve found to best serve our customers’ needs – installation was a breeze, support is impeccable, and the price tag much more reasonable. I highly recommend ImageResizer for any dynamic imaging needs.
+      .quote-bg
+      .quote-author
+        | Craig Boal, 
+        span Web Development Manager
+    li
+      .customer_statement
+        p We've used Nathanael's Image Resizer on a variety of projects, both small and large. It's fast, reliable, robust, easy to use, and a HUGE time saver. I can easily say that we've gotten more bang-for-the-buck from it than anything else we've purchased in the past 5 years. 
+        p Thanks Nathanael for creating such a wonderful product.
+      .quote-bg
+      .quote-author
+        | Dorian Collier, 
+        span Deesea
+
+
 .bx-transparent
   ul.website-carousel
-    - ["skybrud-dk-2","solidstockart-com-1","vensi-shop-ru-1","vensi-shop-ru-2","vertic-com-1","vertic-com-2","vertic-com-3-v","vevo-com-1","vevo-com-2","vevo-com-3","vevo-com-4-v","english.oim-dk-2","etchuk-com-1","etchuk-com-2","fawkes-cycles-co-uk-1","fawkes-cycles-co-uk-2","four-co-nz-1","four-co-nz-2","four-co-nz-3","nextgenaero-com-1","3news-co-nz-1","nextgenaero-com-2","3news-co-nz-2","nothnagle-com-1","3news-co-nz-3","nothnagle-com-2","agn-nl-1","agn-nl-2","genia-dk-1","genia-dk-2","solidstockart-com-2","solidstockart-com-3","solidstockart-com-4","soma-no-1","soma-no-2","stillwaterscamp-org-1","stillwaterscamp-org-2","stillwaterscamp-org-3","mediaworks-co-nz-2","mediaworks-co-nz-3-v","mobifriendly-com-1","mobifriendly-com-2","mosastore-com-1","mosastore-com-2","msn-co-uk-1","airnewzealand-com-1","airnewzealand-com-2","bilbasen-dk-2","bilbasen-dk-3","bjarnhoff-com-1","bjarnhoff-com-2","bjarnhoff-com-3","bjarnhoff-com-4-v","bretoninteractive-com-1","bretoninteractive-com-2","strath-ac-uk-1","strath-ac-uk-2","wanderful-com-1","wanderful-com-2","wp-pl-1","wp-pl-2","wp-pl-3-v","xparo-com-1","xparo-com-2","xparo-com-3","msn-co-uk-2","myob-com-au-1","myob-com-au-2","americastestkitchen-3","americastestkitchen-com-1","americastestkitchen-com-2","aphelie-com-1","aphelie-com-2","appego-se-1","appego-se-2","britevents-com-1","britevents-com-2","pictoric-com-1","pictoric-com-2","pictoric-com-3","pilgrim-dk-1","pilgrim-dk-2","pinnacleofindiana-com-1","pinnacleofindiana-com-2","pixelogicpr-com-1","yamaha-motor-eu-1","yamaha-motor-eu-2","gobasic-dk-1","gobasic-dk-2","goelemental-com-1","goelemental-com-2","goelemental-com-3-v","gotripod-com-1","gotripod-com-2","hmwallace-com-1","appego-se-3-v","Banner780.jpg","bilbasen-dk-1","nattstad-se-1","nattstad-se-2","natural-ie-1","natureshop-com-1","2kwebgroup-com-1","natureshop-com-2","2kwebgroup-com-2","pixelogicpr-com-2","predictiveservice-com-1","britevents-com-3-v","capo-se-1","capo-se-2","cipix-nl-1","cipix-nl-2","citrus-retail-com-1","citrus-retail-com-2","citrus-retail-com-3","hmwallace-com-2","homgroup-com-1","techdept-co-uk-1","techdept-co-uk-2","thedeal-co-nz-1","thedeal-co-nz-2","thedeal-co-nz-3-v","thelocalscene-com-au-1","thelocalscene-com-au-2","theoutfield-net-1","cloudnine-se-1","cloudnine-se-2","predictiveservice-com-2","produktivitetskommissionen-dk-1","produktivitetskommissionen-dk-2","proff-art-dk-1","proff-art-dk-2","protogen-com-au-1","protogen-com-au-2","repzio-com-1","theoutfield-net-2","tigal-com-1","youngfoundations-org-1","youngfoundations-org-2","zenwebsolutions-com-1","zenwebsolutions-com-2","zgm-ca-1","zgm-ca-2","ziber-nl-1","ziber-nl-2","repzio-com-2","rezstream-com-1","cloudnine-se-3-v","creuna-se-1","creuna-se-2","crumpled-dog-com-1","crumpled-dog-com-2","delabo-it-1","delabo-it-2","dotagency-co-uk-1","homgroup-com-2","homgroup-com-3","icnventures-com-1","icnventures-com-2","idea-hr-1","idea-hr-2","increo-no-1","increo-no-2","increo-no-3","inscopeinternational-com-1","dotagency-co-uk-2","ebay_dk.jpg","rezstream-com-2","rezstream-com-3","ry-com-1","ry-com-2","sdu-dk-1","sdu-dk-2","sedonalace-com-1","sedonalace-com-2","tigal-com-2","tradera-com-1","tradera-com-2","tradera-com-3","unique-dk-1","unique-dk-2","unique-dk-3","unique-dk-4-v","valg.oim-dk-1","valg.oim-dk-2","lewis-co-uk-3","lewis-co-uk-4","lucrasoft-nl-1","sedonalace-com-3","lucrasoft-nl-2","sedonalace-com-4","luxury-insider-com-1","edgeandwax-co-uk-1","luxury-insider-com-2","edgeandwax-co-uk-2","marmiton-org-1","edgeandwax-co-uk-3","marmiton-org-2","elections.oim-1","marmiton-org-3-v","elections.oim-2","mediaworks-co-nz-1","emo-uk-com-1","emo-uk-com-2","enferno-se-1","inscopeinternational-com-2","itl-no-1","itl-no-2","kan-se-1","kan-se-2","kan-se-3-v","knowit-se-1","knowit-se-2","lewis-co-uk-1","lewis-co-uk-2","enferno-se-2","english.oim-dk-1","sedonalace-com-5","sierra-trading-post.tiff","sierratradingpost-com-1","sierratradingpost-com-2","sierratradingpost-com-3","sigma-se-1","sigma-se-2","skybrud-dk-1"].each do |w|
-      - parts = w.split(/\-/)
-      - if parts.last == "v" then parts.pop; vert = true; end
-      - ix = parts.pop
-      - tld = ""
-      - tld = parts.pop if parts.last =~ /dk|com|ru|no|nl|org|pl|se|ie|io|hr|it|uk|nz|au/
-      - tld = ".#{parts.pop}.#{tld}" if parts.last =~ /ac|co|com/
-      - domain = parts * "-" + tld
+    - websites = ["skybrud-dk-1","solidstockart-com-1","vevo-com-2","nextgenaero-com-1","msn-co-uk-1","airnewzealand-com-1","bilbasen-dk-3","bjarnhoff-com-1","strath-ac-uk-1","pilgrim-dk-1","yamaha-motor-eu-2","citrus-retail-com-1","homgroup-com-1","cloudnine-se-1","creuna-se-1","delabo-it-1","dotagency-co-uk-1","idea-hr-1","increo-no-3","tradera-com-1","unique-dk-1","valg.oim-dk-1","lewis-co-uk-1", "tradera-com-1","enferno-se-1"].map { |w| parse_domain(w) }
+    - websites.each do |w|
       li
-        img src="http://z.zr.io/rw/showcase/#{w}.png?width=400&height=300&brea"
+        img src="#{w.url}?width=200"
         .screenshot-caption
-          = "#{domain}  (##{ix})"
+          = "#{w.domain}"
 
-    / - ["3news-1","3news", "bilbasen-3","bilbasen.dk (eBay Denmark)", "bjarnhoff-1","www.bjarnhoff.com", "four-1", "four","four-3", "","homgroup-1", "","homgroup-2", "","msn-1","","msn-2", "","sierratradingpost-1","","tradera-1", "","unique-1", "unique.dk","unique-3","unique.dk", "vevo-1", "vevo.com", "vevo-2", "vevo.com (2)", "vevo-3","vevo.com (3)", "citrus-retail-1", "www.citrus-retail.com", "edgeandwax-3", "www.edgeandwax.co.uk", "elections.oim-1","elections.oim.dk", "english.oim-1","english.oim.dk", "fawkes-cycles-1", "www.fawkes-cycles.co.uk", "gobasic-2", "gobasic.dk", "produktivitetskommissionen-1", "produktivitetskommissionen.dk", "stillwaterscamp-1","www.stillwaterscamp.org", "valg.oim-1","valg.oim.dk", "youngfoundations-1", "www.youngfoundations.org", "americastestkitchen-1","americastestkitchen.com","increo-1", "increo.no", "increo-3", "increo.no","lewis-1","","lewis-2","lewis","pictoric-3","","repzio-1","repzio.com","rezstream-1","rezstream", "sedonalace-1", "sedonalace","solidstockart-1","solidstockart","xparo-1","xparo"].each_slice(2) do |a|
-      li
-        img src="http://z.zr.io/rw/showcase/#{a[0]}.png?width=160&height=120&a.sharpen=2"
-        .screenshot-caption
-          = a[1] 
-          = a[0]
 
-.row
-  .span9
-    .title
-      h3 Showcase
-    .row
-      .span3
-        .picture
-          a href="http://www.collective.li" title="collective.li"
-            img src="http://z.zr.io/rw/showcase/Banner780.jpg?width=270&format=png" alt="collective.li"
-            .image-overlay-zoom
-        .item-description
-          h4: a(href="http://www.collective.li") collective.li
-          p 
-            | Collective.li: Share your life magazine.
-      .span3
-        .picture
-           a href="http://london.msn.co.uk/" title="MSN London Olympic Games 2012"
-            img src="http://z.zr.io/rw/showcase/olympics.jpg?width=270&format=png" alt="MSN London Olympics 2012"
-            .image-overlay-zoom
-        .item-description
-          h4: a(href="http://london.msn.co.uk/") MSN London Olympic Games 2012 
-          p ImageResizer is an integral part of MSN UK's responsive website for the Olympic Games. 
-
-          a href="http://www.netmagazine.com/features/how-we-built-msn-uks-responsive-olympics-site" How the site was built
-      .span3
-        .picture
-          a href="http://www.bilbasen.dk" title="example goes here"
-            img src="http://z.zr.io/rw/showcase/ebay_dk.jpg?width=270&format=png" alt="eBay denmark"
-            .image-overlay-zoom
-        .item-description
-          h4
-            a(href="http://www.bilbasen.dk")
-              | eBay Denmark: bilbasen.dk
-          p eBay Denmark's car division receives over 20 million requests per day - all dynamically handled by ImageResizer 
-  .span3
-    .testimonial-container
-      .title
-        h3 Testimonials
-      .testimonials-carousel data-autorotate="2500"
-        ul.carousel
-          li.testimonial
-            .testimonials
-              | ... Just to be clear to the listener, I reached out to Nathanael, and I'm talking about his product because I think it's amazing and awesome, and I've talked about it before on the blog. He's not an advertiser, this is me, Scott, saying that this is a rocking awesome library. - 
-              a href="http://www.hanselminutes.com/313/deep-inside-image-resizing-and-scaling-with-aspnet-and-iis-with-imageresizingnet-author-na" Hanselminutes #313
-            .testimonials-bg
-            .testimonials-author
-              a href="http://hanselman.com"
-                | Scott Hanselman  
-              span
-                | , Web Platform Team, Microsoft
-
-          li.testimonial
-            .testimonials
-              | We have 8 years working knowledge of dynamic image resizing software, and the majority of that time was spent working with industry-leading products such as Adobe Scene7 and eRez. ImageResizer is what we’ve found to best serve our customers’ needs – installation was a breeze, support is impeccable, and the price tag much more reasonable. I highly recommend ImageResizer for any dynamic imaging needs.
-            .testimonials-bg
-            .testimonials-author
-              | Craig Boal, 
-              span Web Development Manager
-          li.testimonial
-            .testimonials
-              p We've used Nathanael's Image Resizer on a variety of projects, both small and large. It's fast, reliable, robust, easy to use, and a HUGE time saver. I can easily say that we've gotten more bang-for-the-buck from it than anything else we've purchased in the past 5 years. 
-              p Thanks Nathanael for creating such a wonderful product.
-            .testimonials-bg
-            .testimonials-author
-              | Dorian Collier, 
-              span Deesea
 
