--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -131,3 +131,28 @@ ul.category_headers{
 .testimonials_home ul.quotations li .quote-author{
   font-weight: bold;
 }
+
+
+blockquote{
+  border: 0;
+  font-family: Georgia, serif;
+  font-size: 18px;
+  font-style: italic;
+  width: 500px;
+  margin: 0.25em 0;
+  padding: 0.25em 40px;
+  line-height: 1.45;
+  position: relative;
+  color: #383838;
+}
+blockquote:before {
+  display: block;
+  content: "\201C";
+  font-size: 80px;
+  position: absolute;
+  left: -20px;
+  top: -20px;
+  color: #7a7a7a;
+}
+
+
