Allow pages to break out of the 9 columns

--- a/content/_layout/page.slim
+++ b/content/_layout/page.slim
@@ -19,6 +19,7 @@ Layout: layout
 
     == yield
 
+
     - if page.meta.append
       == partial page.meta.append.to_sym
 
@@ -36,5 +37,6 @@ Layout: layout
 
       == partial page.meta.sidebar
 
+== yield_content(:next_row)
      
 
