Rearranged sample page

--- a/content/docs/benefits/cases/acme.slim
+++ b/content/docs/benefits/cases/acme.slim
@@ -19,14 +19,13 @@ h1 Acme Corporation
         ul.flex-direction-nav
           li: a.flex-prev href="#" Previous
           li: a.flex-next href="#" Next
+    .whatisir
+      h1 Acme Corporation uses ImageResizer to reduce costs and improve agility
+      p
+        | ImageResizer saves time, money, and increases developer happiness at Acme Corporation
   hr
-
-
-
-
 .row
-  .span3
-    h2 Acme Corporation uses ImageResizer to reduce costs and improve agility
+    
   .span3
     markdown:
 
