Reworked layout of comprehensive demos page to have correct widths

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -155,4 +155,11 @@ blockquote:before {
   color: #7a7a7a;
 }
 
+.discovery-main{ display: none !important;}
+
+span.imagespacer{
+  width:10px;
+  display:inline-block;
+}
+
 
