--- a/content/docs/benefits/comprehensive.slim
+++ b/content/docs/benefits/comprehensive.slim
@@ -8,220 +8,240 @@ p Get the best out of your images with minimal effort. Our adjustments are desig
 p All commands are nondestuctive, giving you free reign to experiment endlessly and revert easily by removing your commands. Unlike other web-based editors, all commands are processed in a single stage, eliminating quality loss from repeated compression.
 
 h2 Transform
+- def widths(*cols); cols.map{|w| (w / cols.inject(:+).to_f * (270 - 10 * (cols.count - 1))).round  } end;
 .row
   .span3
+    - w = widths(1.5,1,1,1).map{ |v| v + 4}
     h4 Scale with any fit mode
-    img src="http://z.zr.io/ri/2s.jpg?height=100"
+    img src="http://z.zr.io/ri/2s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/2s.jpg?width=50&height=50&mode=max"
+    img src="http://z.zr.io/ri/2s.jpg?width=#{w[1]}&height=#{w[1]}&mode=max"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/2s.jpg?width=50&height=50&mode=pad&bgcolor=eee"
+    img src="http://z.zr.io/ri/2s.jpg?width=#{w[2]}&height=#{w[2]}&mode=pad&bgcolor=eee"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/2s.jpg?width=50&height=50&mode=crop"
+    img src="http://z.zr.io/ri/2s.jpg?width=#{w[3]}&height=#{w[3]}&mode=crop"
     p Constrain, carve, pad, or crop to the perfect size with complete alignment control.
   .span3
+    - w = widths(1,1,1)
     h4 Rotate & Flip
-    img src="http://z.zr.io/ri/3s.jpg?height=100"
+    img src="http://z.zr.io/ri/3s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/3s.jpg?height=50&srotate=90"
+    img src="http://z.zr.io/ri/3s.jpg?width=#{w[1]}&srotate=90"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/3s.jpg?height=50&rotate=30&flip=h"
+    img src="http://z.zr.io/ri/3s.jpg?width=#{(w[2] * 0.6).round}&rotate=30&flip=h"
     p Flip, rotate, or auto-rotate
   .span3
+    - w = widths(1,1,1)
     h4 Modify canvas
-    img src="http://z.zr.io/ri/4s.jpg?height=50"
+    img src="http://z.zr.io/ri/4s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/4s.jpg?height=30&margin=5&bgcolor=eee"
+    img src="http://z.zr.io/ri/4s.jpg?width=#{w[1] - 10}&margin=5&bgcolor=eee"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/4s.jpg?height=30&paddingWidth=5&paddingColor=ccc&borderWidth=5&borderColor=ddd&margin=5&bgcolor=eee"
+    img src="http://z.zr.io/ri/4s.jpg?width=#{w[1] - 30}&paddingWidth=5&paddingColor=ccc&borderWidth=5&borderColor=ddd&margin=5&bgcolor=eee"
     p 
       | Add padding, borders, and margins 
       em within the image. 
       | No more box-model nightmares.
 .row
   .span3
+    - w = widths(1,1)
     h4 Manual crop
-    img src="http://z.zr.io/ri/1s.jpg?width=100"
+    img src="http://z.zr.io/ri/1s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/1s.jpg?crop=18,40,40,60&cropxunits=100&cropyunits=100&width=100"
+    img src="http://z.zr.io/ri/1s.jpg?crop=18,40,40,60&cropxunits=100&cropyunits=100&width=#{w[1]}"
     p Crop by percent, pixels, or resolution-independent units (works seamlessly with jCrop).
 
   .span3
+    - w = widths(1.5,1,1)
     h4 Auto-remove whitespace
-
-    img src="http://z.zr.io/ri/18s.jpg?width=100"
+    img src="http://z.zr.io/ri/18s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/18s.jpg?width=50&trim.threshold=33&trim.percentpadding=5"
+    img src="http://z.zr.io/ri/18s.jpg?width=#{w[1]}&trim.threshold=33&trim.percentpadding=5"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/18s.jpg?width=50&trim.threshold=80&trim.percentpadding=5"
+    img src="http://z.zr.io/ri/18s.jpg?width=#{w[2]}&trim.threshold=80&trim.percentpadding=5"
 
     p Product photos are painless with energy-based whitespace removal. 
 
   .span3
+    - w = widths(1.3,1,1)
     h4 Face detection & auto-crop
-    img src="http://z.zr.io/ri/5s.jpg?height=60"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=60&height=60&mode=crop&c.focus=faces"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&height=#{w[1]}&mode=crop&c.focus=faces"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=60&height=60&mode=crop&c.focus=faces&c.zoom=true"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&height=#{w[2]}&mode=crop&c.focus=faces&c.zoom=true"
     p Provide focus points or use automatic face detection to ensure everyone stays in the photo.
 hr
 h2 Enhance
 .row
+  - w = widths(1,1,1)
   .span3
     h4 Unsharp Mask
-    img src="http://z.zr.io/ri/5s.jpg?height=50"
+    img src="http://z.zr.io/ri/fix3.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.sharpen=20&quality=100"
+    img src="http://z.zr.io/ri/fix3.jpg?width=#{w[1]}&a.sharpen=20&quality=100"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.sharpen=100&quality=100"
+    img src="http://z.zr.io/ri/fix3.jpg?width=#{w[2]}&a.sharpen=100&quality=100"
     h4 Adjust contrast
-    img src="http://z.zr.io/ri/5s.jpg?height=50"
+    img src="http://z.zr.io/ri/fix1.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.contrast=0.3"
+    img src="http://z.zr.io/ri/fix1.jpg?width=#{w[1]}&s.contrast=0.3"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.contrast=0.8"
+    img src="http://z.zr.io/ri/fix1.jpg?width=#{w[2]}&s.contrast=0.5"
   .span3
     h4 Fix exposure
-    img src="http://z.zr.io/ri/5s.jpg?height=50"
+    img src="http://z.zr.io/ri/fix1.jpg?width=#{w[0]}&s.brightness=-0.2"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.brightness=0.2"
+    img src="http://z.zr.io/ri/fix1.jpg?width=#{w[1]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.brightness=-0.2"
+    img src="http://z.zr.io/ri/fix1.jpg?width=#{w[2]}&s.brightness=0.1"
     h4 Enhance saturation
-    img src="http://z.zr.io/ri/5s.jpg?height=50"
+    img src="http://z.zr.io/ri/11s.jpg?width=#{w[0]}&s.saturation=-0.2"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.saturation=0.3"
+    img src="http://z.zr.io/ri/11s.jpg?width=#{w[1]}&s.saturation=0"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.saturation=0.8"
+    img src="http://z.zr.io/ri/11s.jpg?width=#{w[2]}&s.saturation=0.4"
   .span3
     h4 Auto-white balance
-    img src="http://z.zr.io/ri/5s.jpg?height=50"
+    img src="http://z.zr.io/ri/fix3.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.balancewhite=true&a.balancethreshold=0.1"
+    img src="http://z.zr.io/ri/fix3.jpg?width=#{w[1]}&a.balancewhite=true&a.balancethreshold=0.1"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.balancewhite=true&a.balancethreshold=0.6"
+    img src="http://z.zr.io/ri/fix3.jpg?width=#{w[2]}&a.balancewhite=true&a.balancethreshold=0.6"
     h4 Smart noise removal
-    img src="http://z.zr.io/ri/5s.jpg?height=50"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.removenoise=5"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&a.removenoise=5"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.removenoise=10"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&a.removenoise=10"
 hr
 h2 Filter
 .row
+  - w = widths(1,1,1)
   .span3
     h4 Grayscale fixes everything
-    img src="http://z.zr.io/ri/utah2.jpg?height=50"
+    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/utah2.jpg?height=50&s.grayscale=true"
+    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[1]}&s.grayscale=true"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/utah2.jpg?height=50&s.grayscale=ry"
+    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[2]}&s.grayscale=ry"
+    br
+    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/utah2.jpg?height=50&s.grayscale=bt709"
+    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[1]}&s.grayscale=bt709"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/utah2.jpg?height=50&s.grayscale=flat"
+    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[2]}&s.grayscale=flat"
   .span3
     h4 Sepia, Warming and Cooling Filters
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.sepia=true"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}&s.sepia=true"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.overlay=AC7A3320"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.overlay=AC7A3320"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.shift=AC7A3320"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.shift=AC7A3320"
     br
-    img src="http://z.zr.io/ri/5s.jpg?height=50"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.shift=EC8A0020"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.shift=EC8A0020"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.shift=EBB11320"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.shift=EBB11320"
     br
-    img src="http://z.zr.io/ri/5s.jpg?height=50"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.shift=005DFF20"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.shift=005DFF20"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.shift=00C1B120"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.shift=00C1B120"
 
   .span3
     h4 Paint, posterize, and blur 
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.oilpainting=0"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}&a.oilpainting=0"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.oilpainting=15"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&a.oilpainting=15"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.oilpainting=30"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&a.oilpainting=30"
     br
-    img src="http://z.zr.io/ri/5s.jpg?height=50"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.posterize=64"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&a.posterize=64"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.posterize=128"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&a.posterize=128"
     br
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.blur=0"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}&a.blur=0"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.blur=5"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&a.blur=5"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&a.blur=15"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&a.blur=15"
 .row
   .span3
+    - w = widths(1,1,1,1,0.5)
     h4 Round corners
-    img src="http://z.zr.io/ri/14s.jpg?width=50"
+    img src="http://z.zr.io/ri/14s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/14s.jpg?width=50&s.roundcorners=100,0,100,0"
+    img src="http://z.zr.io/ri/14s.jpg?width=#{w[1]}&s.roundcorners=100,0,100,0"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/14s.jpg?width=50&s.roundcorners=40"
+    img src="http://z.zr.io/ri/14s.jpg?width=#{w[2]}&s.roundcorners=40"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/14s.jpg?width=50&s.roundcorners=100"
+    img src="http://z.zr.io/ri/14s.jpg?width=#{w[3]}&s.roundcorners=100"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/14s.jpg?width=25&height=25&mode=crop&s.roundcorners=100"
+    img src="http://z.zr.io/ri/14s.jpg?width=#{w[4]}&height=#{w[4]}&mode=crop&s.roundcorners=100"
   .span3
+    - w = widths(1,1,1,1)
     h4 Feather edges
-    img src="http://z.zr.io/ri/12s.jpg?width=50"
+    img src="http://z.zr.io/ri/12s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/12s.jpg?width=50&a.featheredges=200&a.featherout=0.2&bgcolor=black" 
+    img src="http://z.zr.io/ri/12s.jpg?width=#{w[1]}&a.featheredges=200&a.featherout=0.2&bgcolor=black" 
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/12s.jpg?width=50&a.featheredges=200&bgcolor=black" 
+    img src="http://z.zr.io/ri/12s.jpg?width=#{w[2]}&a.featheredges=200&bgcolor=black" 
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/12s.jpg?width=50&a.featheredges=200&bgcolor=white" 
+    img src="http://z.zr.io/ri/12s.jpg?width=#{w[3]}&a.featheredges=200&bgcolor=white" 
   .span3
+    - w = widths(1,1,1)
     h4 Make JPEGs transparent
-    img src="http://z.zr.io/ri/5s.jpg?height=50"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.alpha=0.8&format=png"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.alpha=0.8&format=png"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?height=50&s.alpha=0.6&format=png"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.alpha=0.6&format=png"
 hr
 h2 Advanced
 .row
   .span3
+    - w = widths(1,1)
     h4 Face & Eye detection
-    img src="http://z.zr.io/ri/2s.jpg?f.show=true&height=100"
-    |  
-    img src="http://z.zr.io/ri/5s.jpg?height=100&r.autoeyes=true"
+    img src="http://z.zr.io/ri/2s.jpg?width=#{w[0]}&f.show=true"
+    span.imagespacer
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&r.autoeyes=true"
   .span3
+    - w = widths(1)
     h4 Red-eye repair
-    img src="http://z.zr.io/ri/5s.jpg?height=100&r.autoeyes=true"
+    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}&r.autoeyes=true"
     p Our adaptive circle fill algorithm repairs red-eye while maintaining integrity.
   .span3
+    - w = widths(1,1)
     h4 Change aspect ratio with seam carving
-
-    img src="http://z.zr.io/ri/3s.jpg?height=100"
+    img src="http://z.zr.io/ri/3s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/3s.jpg?width=100&height=100&mode=carve"
+    img src="http://z.zr.io/ri/3s.jpg?width=#{w[1]}&height=#{w[1]}&mode=carve"
 .row
 
   .span3
+    - w = widths(1,1,1,1)
     h4 Apply overlays and backgrounds
-    img src="http://z.zr.io/ri/23s.jpg?width=100&watermark=logo"
-    img src="http://z.zr.io/ri/23s.jpg?width=100&watermark=bg&s.alpha=0.7&s.roundcorners=100"
-    img src="http://z.zr.io/ri/23s.jpg?width=100&watermark=fill-text1&s.alpha=.5&text=hi"
-    img src="http://z.zr.io/ri/23s.jpg?width=100&watermark=fill-text1&s.alpha=.5&text=We have flexible layout"
+    img src="http://z.zr.io/ri/23s.jpg?width=#{w[0]}&watermark=logo"
+    span.imagespacer
+    img src="http://z.zr.io/ri/23s.jpg?width=#{w[1]}&watermark=bg&s.alpha=0.7&s.roundcorners=100"
+    span.imagespacer
+    img src="http://z.zr.io/ri/23s.jpg?width=#{w[2]}&watermark=fill-text1&s.alpha=.5&text=hi"
+    span.imagespacer
+    img src="http://z.zr.io/ri/23s.jpg?width=#{w[3]}&watermark=fill-text1&s.alpha=.5&text=We have flexible layout"
     p Overlay (or underlay) an unlimited number of text and image layers; exercise complete layout control.
   .span3
+    - w = widths(0.5,1,1)
     h4 Upscale on your terms
-    img src="http://z.zr.io/ri/15tiny.jpg?width=80&height=80"
+    img src="http://z.zr.io/ri/15tiny.jpg?width=#{w[0]}&height=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/15tiny.jpg?width=80&height=80&scale=canvas&bgcolor=ddd"
+    img src="http://z.zr.io/ri/15tiny.jpg?width=#{w[1]}&height=#{w[1]}&scale=canvas&bgcolor=ddd"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/15tiny.jpg?width=80&height=80&scale=both&bgcolor=ddd&fi.scale=lanczos"
+    img src="http://z.zr.io/ri/15tiny.jpg?width=#{w[2]}&height=#{w[2]}&scale=both&bgcolor=ddd&fi.scale=lanczos"
     p Upscale only when you want to, the way you want to, with the upscale filter you want.
   .span3
     h4 Encode & Compress
