Removed eBay logo, replaced stock imagery with Increo

--- a/content/index.slim
+++ b/content/index.slim
@@ -13,9 +13,12 @@ h1 RESTful image processing
       #flex1.flexslider
         ul.slides
           li
-            img src="http://cdn4.f-cdn.com/contestentries/14312/7092528/5137361bdc16e_thumb900.jpg"
+            img src="http://z.zr.io/rw/clients/increo-1.jpg?width=1170"
+            .slide-caption.n.hidden-phone
+              h3 Eilev Hagen, System developer, InCreo Interactive Creations
+              p Handling images in various formats is a daily challenge in our projects. Using the ImageResizer saves valuable time. We don't have to use effort creating different sizes or dealing with optimization, it just works. This library is strongly recommended. 
           li
-            img src="http://cdn4.f-cdn.com/contestentries/14312/7092528/51375f862b3ff_thumb900.jpg"
+            img src="http://z.zr.io/rw/clients/increo-2.png?format=jpg&width=1170"
             .slide-caption.n.hidden-phone
               h3 This is a caption
               p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
@@ -202,7 +205,7 @@ h3 Who uses ImageResizer?
     li: img src="http://z.zr.io/rw/clientlogos/repzio.png?width=160&height=100"  alt="RepZio"
     li: img src="http://z.zr.io/rw/clientlogos/Microsoft200px.png?width=160&height=100" alt="Microsoft" 
     / http://www.microsoft.com/global/en-us/news/publishingimages/logos/MSFT_logo_Web.jpg
-    li: img src="http://z.zr.io/rw/clientlogos/ebay-300.png?width=160&height=100" alt="eBay"
+    / li: img src="http://z.zr.io/rw/clientlogos/ebay-300.png?width=160&height=100" alt="eBay"
     li: img src="http://z.zr.io/rw/clientlogos/publishgreen.png?width=160&height=100" alt="Publish Green"
     li: img src="http://z.zr.io/rw/clientlogos/flavorplate.png?width=160&height=100" alt="flavor plate"
     li: img src="http://z.zr.io/rw/clientlogos/MizuniLogoR_933x216.png?width=160&height=100" alt="Mizuni"
@@ -236,7 +239,9 @@ h3 Who uses ImageResizer?
         | Dorian Collier, 
         span Deesea
 
-
+h3 A selection of sites using ImageResizer
+p
+  a href="/docs/benefits/customers" View more here
 .bx-transparent
   ul.website-carousel
     - websites = ["skybrud-dk-1","solidstockart-com-1","vevo-com-2","nextgenaero-com-1","msn-co-uk-1","airnewzealand-com-1","bilbasen-dk-3","bjarnhoff-com-1","strath-ac-uk-1","pilgrim-dk-1","yamaha-motor-eu-2","citrus-retail-com-1","homgroup-com-1","cloudnine-se-1","creuna-se-1","delabo-it-1","dotagency-co-uk-1","idea-hr-1","increo-no-3","tradera-com-1","unique-dk-1","valg.oim-dk-1","lewis-co-uk-1", "tradera-com-1","enferno-se-1"].map { |w| parse_domain(w) }
