Fixed size of second InCreo slide

--- a/content/index.slim
+++ b/content/index.slim
@@ -18,10 +18,11 @@ h1 RESTful image processing
               h3 Eilev Hagen, System developer, InCreo Interactive Creations
               p Handling images in various formats is a daily challenge in our projects. Using the ImageResizer saves valuable time. We don't have to use effort creating different sizes or dealing with optimization, it just works. This library is strongly recommended. 
           li
-            img src="http://z.zr.io/rw/clients/increo-2.png?format=jpg&width=1170"
+            img src="http://z.zr.io/rw/clients/increo-2.png?format=jpg&width=1170&height=390&mode=crop&anchor=topcenter"
             .slide-caption.n.hidden-phone
-              h3 This is a caption
-              p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+              h3 Eilev Hagen, System developer, InCreo Interactive Creations
+              p Handling images in various formats is a daily challenge in our projects. Using the ImageResizer saves valuable time. We don't have to use effort creating different sizes or dealing with optimization, it just works. This library is strongly recommended. 
+          
         ul.flex-direction-nav
           li: a.flex-prev href="#" Previous
           li: a.flex-next href="#" Next
